# cora_customer_agent

./: .env.example  .gitignore  README.md  company_faq.json  company_faq_dataset.jsonl  company_info.json  company_info.txt  company_products.json  company_products_dataset.jsonl  docker-compose.yaml  notebook.ipynb  pyproject.toml
src/cora_customer_agent/: __init__.py  cora_config.py  cora_config.yaml  gradio_chatbot.py  mcp.py  mcp_server.py  setup_logging.py
src/cora_customer_agent/utils/: get_agent.py  get_agent_middleware.py  get_agent_tools.py  get_company_docs.py  get_embedding_model.py  get_mcp_client.py  get_ollama_llm.py  get_semantic_cache.py  get_system_prompt.py  get_vector_store.py  get_yaml_config.py  load_ollama_llm.py  load_vector_store.py  load_yaml_config.py
