[project]
name = "cora-customer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels", email = "niels.scholz01@web.de" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "gradio>=5.49.1",
    "langchain>=1.0.5",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "redis>=7.0.1",
    "sentence-transformers>=5.1.2",
]

[project.scripts]
cora-customer-agent = "cora_customer_agent:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
